BZ#1381425: Added info on Tenant Mapping
This commit adds an explanation of how Tenant Mapping works
by mapping OpenStack tenant lists to cloud tenants in Cloudforms/
ManageIQ.

New content added:

- Short explanation of how tenant mapping works
- Extra step for enabling tenant mapping when adding an OpenStack
  cloud provider

The content for that short explanation is single-sourced between a
subsection on the feature in Tenants (in the
doc-Managing_Infrastructure_and_Inventory doc) and a note in the
instructions for adding an OpenStack cloud provider (in the
doc-Managing_Providers doc).

I also took this opportunity to single-source an explanation of
Keystone V3 in the instructions for adding an OpenStack cloud
and infrastructure provider.

--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -8,6 +8,11 @@ When using the `admin` credentials, a user in {product-title} provisions into th
 
 [NOTE]
 =====
+include::common/tenant-mapping.adoc[]
+=====
+
+[NOTE]
+=====
 You can set whether {product-title} should use the Telemetry service or Advanced Message Queueing Protocol (AMQP) for event monitoring. If you choose Telemetry, you should first configure the *ceilometer* service on the overcloud to store events. See xref:openstack-events-oc[] for instructions.
 
 For more information, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-telemetry[OpenStack Telemetry (ceilometer)] in the Red Hat OpenStack Platform _Architecture Guide_.
@@ -25,7 +30,12 @@ For more information, see https://access.redhat.com/documentation/en/red-hat-ope
 +
 If you select `Keystone v3`, enter the `Keystone V3 Domain ID` that {product-title} should use. This is the domain of the user account you will be specifying later in the *Default* tab. If domains are not configured in the provider, enter *default*.
 +
-NOTE: With Keystone API v3, domains are used to determine administrative boundaries of service entities in OpenStack. Domains allow you to group users together for various purposes, such as setting domain-specific configuration or security options. For more information, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-identity[OpenStack Identity (keystone)] in the Red Hat OpenStack Platform _Architecture Guide_.
+[NOTE]
+=========
+include::common/osp-keystone-api-v3.adoc[]
+=========
+
+. By default, _tenant mapping_ is disabled. To enable it, set *Tenant Mapping Enabled* to *Yes*.
 
 . Select the appropriate *Zone* for the provider. By default, the zone is set to *default*.
 +
