--- a/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_OpenStack_Infrastructure_Provider.adoc
@@ -6,7 +6,6 @@ After initial installation and creation of a {product-title} environment, add an
 When creating an OpenStack Infrastructure provider in {product-title}, select the OpenStack Infrastructure provider's `admin` user because it is the default administrator of the OpenStack `admin` tenant.
 When using the `admin` credentials, a user in {product-title} provisions into the `admin` tenant, and sees images, networks, and instances that are associated with the `admin` tenant.
 
-
 [NOTE]
 =====
 You can set whether {product-title} should use the Telemetry service or Advanced Message Queueing Protocol (AMQP) for event monitoring. If you choose Telemetry, you should first configure the *ceilometer* service on the undercloud to store events. See xref:openstack-events-uc[] for instructions.
@@ -22,6 +21,11 @@ For more information, see https://access.redhat.com/documentation/en/red-hat-ope
 . Select *OpenStack Platform Director* from the *Type* list.
 
 . Select the *API Version* of your OpenStack provider's Keystone service from the list. The default is `Keystone v2`.
++
+[NOTE]
+=========
+include::common/osp-keystone-api-v3.adoc[]
+=========
 
 . Select the appropriate *Zone* for the provider. By default, the zone is set to *default*.
 +
