Revert "Changed version numbers to 4.2-Beta for the downstream meta data."
This reverts commit f627d0c50d5a9c3fa3d40d1d0be113ea538916e5.

Conflicts:
	doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
	doc-Installing_on_Microsoft_Azure/cfme/master.adoc
	doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
	doc-Installing_on_Red_Hat_Enterprise_Virtualization/cfme/master.adoc
	doc-Installing_on_VMware_vSphere/cfme/master.adoc

--- a/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Managing Infrastructure and Inventory
 :imagesdir: images
-:vernum: 4.2-Beta
+:vernum: 4.2
 :doctype: book
 :toc: left
 :toclevels: 3
@@ -71,5 +71,4 @@ include::topics/Key_Pair.adoc[]
 
 :leveloffset: 1
 include::topics/Object_Stores.adoc[]
-
 
