--- a/doc-Deployment_Planning_Guide/cfme/master.adoc
+++ b/doc-Deployment_Planning_Guide/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Deployment Planning Guide
 :imagesdir: images
-:vernum: 4.2-Beta
+:vernum: 4.2
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -16,6 +16,5 @@ include::common/attributes/cfme.adoc[]
 include::topics/introduction.adoc[]
 include::topics/planning.adoc[]
 include::topics/capacity.adoc[]
-
 
 
