--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on Red Hat Enterprise Linux OpenStack Platform
 :imagesdir: images
-:vernum: 4.2-Beta
+:vernum: 4.2
 :toc: left
 :toclevels: 3
 :experimental:
