--- a/doc-Installing_on_VMware_vSphere/cfme/master.adoc
+++ b/doc-Installing_on_VMware_vSphere/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on VMware vSphere
 :imagesdir: images
-:vernum: 4.2-Beta
+:vernum: 4.2
 :toc: left
 :toclevels: 3
 :experimental:
