--- a/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/cfme/master.adoc
+++ b/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/cfme/master.adoc
@@ -1,6 +1,6 @@
 =  Integration with AWS CloudFormation and OpenStack Heat
 :imagesdir: images
-:vernum: 4.2-Beta
+:vernum: 4.2
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -17,7 +17,6 @@ include::topics/Introduction.adoc[]
 include::topics/Integration_with_AWS_CloudFormation_and_OpenStack_Heat.adoc[]
 include::topics/Cloud_Orchestration.adoc[]
 include::topics/CloudFormation_Provisioning_via_Services.adoc[]
-
 
 
 
