--- a/doc-REST_API/cfme/master.adoc
+++ b/doc-REST_API/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Red Hat CloudForms REST API
 :imagesdir: images
-:vernum: 4.2-Beta
+:vernum: 4.2
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -17,7 +17,6 @@ include::topics/chap-Specification.adoc[]
 include::topics/chap-Reference_Guide.adoc[]
 
 include::topics/chap-Examples.adoc[]
-
 
 
 
