--- a/doc-Managing_Providers/topics/Viewing_Swift_Manager_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Swift_Manager_Timeline.adoc
@@ -1,11 +1,11 @@
 [[viewing_swift_timeline]]
-= Viewing a Swift Provider’s Timeline
+= Viewing a Swift Manager’s Timeline
 
-In {product-title}, view events for a Swift storage provider by following these steps:
+In {product-title}, view events for a Swift storage manager by following these steps:
 
 . Navigate to menu:Storage[Storage Providers].
-. Select your OpenStack Swift manager to go to the Swift provider’s summary page.
-. Click  image:1994.png[Monitoring] (*Monitoring*), and then  image:1995.png[Timelines] (*Timelines*) to view the events timeline for the provider.
+. Select your OpenStack Swift manager to go to the Swift manager’s summary page.
+. Click  image:1994.png[Monitoring] (*Monitoring*), and then  image:1995.png[Timelines] (*Timelines*) to view the events timeline for the manager.
 . View a timeline of either management events or policy events:
 .. To view management events, select *Management Events*.
 .. Specify the type of event to view.
