--- a/doc-Managing_Providers/topics/Viewing_Swift_Object_Stores.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Swift_Object_Stores.adoc
@@ -1,9 +1,9 @@
 [[viewing_swift_object_stores]]
-= Viewing Cloud Object Stores on an OpenStack Swift Provider
+= Viewing Cloud Object Stores on an OpenStack Swift Storage Manager
 
 The object store summary page shows details including the object store's size, parent cloud, storage manager, cloud tenant, and the number of cloud objects on the object store.
 
-In {product-title}, view cloud object stores on a Swift storage provider by following these steps:
+In {product-title}, view cloud object stores on a Swift storage manager by following these steps:
 
 . Navigate to menu:Storage[Object stores].
 . Click a object store to go to the object store's summary page. 
