--- a/doc-Managing_Providers/topics/Viewing_a_Cinder_Manager_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_a_Cinder_Manager_Timeline.adoc
@@ -1,11 +1,11 @@
 [[viewing_cinder_timeline]]
-= Viewing a Cinder Provider’s Timeline
+= Viewing a Cinder Manager’s Timeline
 
-In {product-title}, view events for a Cinder storage provider by following these steps:
+In {product-title}, view events for a Cinder storage manager by following these steps:
 
-. Navigate to menu:Storage[Storage Providers].
-. Select your OpenStack Cinder manager to go to the Cinder provider’s summary page.
-. Click  image:1994.png[Monitoring] (*Monitoring*), and then  image:1995.png[Timelines] (*Timelines*) to view the events timeline for the provider.
+. Navigate to menu:Storage[Storage Managers].
+. Select your OpenStack Cinder manager to go to the Cinder manager’s summary page.
+. Click  image:1994.png[Monitoring] (*Monitoring*), and then  image:1995.png[Timelines] (*Timelines*) to view the events timeline for the manager.
 . A timeline of either management events or policy events can be viewed. 
 .. To view management events, select *Management Events*.
 .. Specify the type of event to view.
