--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -29,12 +29,12 @@ include::topics/Cloud_Providers.adoc[]
 :leveloffset: 1
 include::topics/Networking_Providers.adoc[]
 
-:leveloffset: 1
-include::topics/Storage_Providers.adoc[]
-
 
 :leveloffset: 1
 include::topics/Containers_Providers.adoc[]
+
+:leveloffset: 1
+include::topics/Storage_Managers.adoc[]
 
 
 
