--- a/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
+++ b/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
@@ -1,7 +1,7 @@
 [[creating_cloud_volumes_cinder]]
-= Creating Cloud Volumes on an OpenStack Cinder Provider
+= Creating Cloud Volumes on an OpenStack Cinder Manager
 
-You can create and attach cloud volumes to your OpenStack Cinder provider.
+You can create and attach cloud volumes to your OpenStack Cinder manager.
 
 To create a volume on your Cinder storage manager:
 
