edits to Swift content - removed timeline section; edited procedure for viewing object stores, following SME review

--- a/doc-Managing_Providers/topics/Viewing_Swift_Manager_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Swift_Manager_Timeline.adoc
@@ -1,6 +1,8 @@
 [[viewing_swift_timeline]]
 = Viewing a Swift Manager’s Timeline
 
+//SME feedback - leave section out of 4.2 release. See https://bugzilla.redhat.com/show_bug.cgi?id=1382585#c7
+
 In {product-title}, view events for a Swift storage manager by following these steps:
 
 . Navigate to menu:Storage[Storage Providers].
