added new sections on Cinder volume functions, following SME comments. WIP with questions contained.

--- a/doc-Managing_Providers/topics/Storage_Managers.adoc
+++ b/doc-Managing_Providers/topics/Storage_Managers.adoc
@@ -6,8 +6,6 @@ In {product-title}, a storage manager is a service providing storage resources t
 
 Two types of storage managers are currently available to {product-title}: OpenStack Cinder and OpenStack Swift, which manage physical and software-defined storage. These storage managers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
 
-//The web interface uses virtual thumbnails to represent providers. Each thumbnail contains four quadrants by default, which display basic information about each provider.
-
 
 :leveloffset: 2
 = OpenStack Cinder Managers
@@ -25,10 +23,22 @@ include::Viewing_a_Cinder_Manager_Timeline.adoc[]
 include::Creating_Cloud_Volumes_on_Cinder.adoc[]
 
 :leveloffset: 3
+include::Creating_a_Cinder_Backup.adoc[]
+
+:leveloffset: 3
+include::Restoring_from_a_Cinder_Backup.adoc[]
+
+:leveloffset: 3
+include::Creating_a_Cinder_Volume_Snapshot.adoc[]
+
+:leveloffset: 3
 include::Attaching_Cinder_Volumes.adoc[]
 
 :leveloffset: 3
 include::Detaching_Cinder_Volumes.adoc[]
+
+:leveloffset: 3
+include::Editing_Cinder_Volumes.adoc[]
 
 :leveloffset: 3
 include::Deleting_Cinder_Volumes.adoc[]
