--- a/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
+++ b/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
@@ -9,5 +9,12 @@ To create a volume on your Cinder storage manager:
 . Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[] (*Add a new Cloud Volume*).
 . Enter a *Volume Name*.
 . Enter the volume size in gigabytes (GB).
-. Under *Placement*, select the cloud tenant to attach it to. 
+. Under *Placement*, select the cloud tenant to attach it to.
 . Click *Add*.
+
+
+[IMPORTANT]
+====
+After creating a volume, only the volume name can be edited. 
+====
+
