edited wording slightly after trying out UI with object store

--- a/doc-Managing_Providers/topics/Viewing_Swift_Object_Stores.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Swift_Object_Stores.adoc
@@ -5,17 +5,8 @@ The object store summary page shows details including the object store's size, p
 
 In {product-title}, view cloud object stores on a Swift storage manager by following these steps:
 
-. Navigate to menu:Storage[Object Stores] to display the object store container.
-. Select a container to open a summary page for that object store container. 
-. Click *Object Store Objects* to view the list of object stores for that particular object store container. 
-.  Click one of the object stores in the list to see detailed summary
- information for that particular object store.
-
-
-//D: would be a good place to add a screenshot.
-
-
-
-//Other tasks to document besides viewing Cloud object stores?
-
+. Navigate to menu:Storage[Object Stores] to display a list of object store containers.
+. Click a container to open a summary page for that object store container. 
+. Click *Cloud Objects* to view a list of object stores in that object store container. 
+. Click an object store from the list to view a summary page for that particular object store. 
 
