applied Don's feedback and additional info, links to the Cinder sections

--- a/doc-Managing_Providers/topics/Creating_a_Cinder_Volume_Snapshot.adoc
+++ b/doc-Managing_Providers/topics/Creating_a_Cinder_Volume_Snapshot.adoc
@@ -1,7 +1,7 @@
 [[creating_cinder_volume_snapshot]]
 = Creating a Snapshot of a Cloud Volume
 
-You can create a snapshot of a Cinder cloud volume (Q: to restore to? For what purpose?).
+You can create a snapshot of a Cinder cloud volume to preserve a volume's state at a specific point in time. 
 
 To create a snapshot of a volume:
 
@@ -14,3 +14,8 @@ To create a snapshot of a volume:
 View a volume's snapshots by clicking *Cloud Volume Snapshots* on the volume's summary page.
 
 Question: Anything else you could use the snapshot for?
+
+[NOTE]
+====
+See https://access.redhat.com/documentation/en/red-hat-openstack-platform/9/single/storage-guide#section-create-clone-delete-vol-snapshots[Create, Use, or Delete Volume Snapshots] in the _Red Hat OpenStack Platform Storage Guide_ for more information about snapshots.
+====
