--- a/doc-Managing_Providers/topics/Restoring_from_a_Cinder_Backup.adoc
+++ b/doc-Managing_Providers/topics/Restoring_from_a_Cinder_Backup.adoc
@@ -1,7 +1,7 @@
 [[restoring_from_a_cinder_backup]]
 = Restoring from a Cloud Volume Backup 
 
-You can restore your system from a backup of a Cinder cloud volume with the following steps:
+In case of data loss, you can restore your system from a backup of a Cinder cloud volume with the following steps:
 
 . Navigate to menu:Storage[Volumes].
 . Click the volume you want to back up to open the volume's summary page.
