--- a/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
+++ b/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
@@ -1,7 +1,12 @@
 [[creating_a_cinder_backup]]
 = Creating a Cloud Volume Backup
 
-You can create a backup of a Cinder cloud volume to restore to in the future.
+You can create a backup of a Cinder cloud volume to protect against data loss, and restore to in the future.
+
+[IMPORTANT]
+====
+The `cinder-backup` service must be enabled on the OpenStack Cinder manager to create a volume backup.
+====
 
 To create a backup of a volume:
 
@@ -9,7 +14,18 @@ To create a backup of a volume:
 . Click the volume you want to back up to open the volume's summary page.
 . Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Create a Backup of this Cloud Volume] (*Create a Backup of this Cloud Volume*). 
 . Enter a name for the backup in *Backup Name*.
-. (Optional) Select *Incremental?* to (QUESTION: What does this do?)
+. (Optional) Select *Incremental?* to take an incremental backup of the volume instead of a full backup.
++
+[NOTE]
+====
+You can take an incremental backup of a volume if you have at least one existing full backup of the volume. An incremental volume saves resources by capturing only changes made to the volume since its last backup. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/9/single/storage-guide#section-create-volume-backup-incremental[Create an Incremental Volume Backup] in the _Red Hat OpenStack Platform Storage Guide_ for details.
+====
++
 . Click *Save*.
 
 View a volume's backups by clicking *Cloud Volume Backups* on the volume's summary page.
+
+[NOTE]
+====
+See https://access.redhat.com/documentation/en/red-hat-openstack-platform/9/single/storage-guide#section-volumes-advanced-backup[Back Up and Restore a Volume] in the _Red Hat OpenStack Platform Storage Guide_ for more information about backups.
+====
