--- a/doc-Managing_Providers/topics/Viewing_Network_Providers_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Network_Providers_Timeline.adoc
@@ -1,5 +1,8 @@
 = Viewing a Network Provider's Timeline
 
+//SME feedback - leave section out of 4.2 release. See https://bugzilla.redhat.com/show_bug.cgi?id=1382585#c7
+
+
 View the timeline of events for instances registered to a network provider. 
 
 . Navigate to menu:Networks[Providers]. 
