--- a/doc-Managing_Providers/topics/Viewing_Swift_Object_Stores.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Swift_Object_Stores.adoc
@@ -7,6 +7,6 @@ In {product-title}, view cloud object stores on a Swift storage manager by follo
 
 . Navigate to menu:Storage[Object Stores] to display a list of object store containers.
 . Click a container to open a summary page for that object store container. 
-. Click *Cloud Objects* to view a list of object stores in that object store container. 
-. Click an object store from the list to view a summary page for that particular object store. 
+. Click *Cloud Objects* to view a list of object stores in the object store container. 
+. Click an object store from the list to view the object store's summary page. 
 
