--- a/doc-Managing_Providers/topics/Adding_Viewing_Network_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Viewing_Network_Providers.adoc
@@ -1,13 +1,28 @@
-= Adding or Viewing Network Providers 
+= Adding or Viewing Network Providers
 
 [NOTE]
 ====
-All supported network providers, that is OpenStack Network, Azure Network, and Amazon EC2 Network, are added or removed automatically upon adding or removing the respective cloud provider. 
+All supported network providers - OpenStack Network, Azure Network, and Amazon EC2 Network, are added or removed automatically upon adding or removing the respective cloud provider.
 ====
 
-To view network providers:
+Viewing network providers:
 
-. Navigate to menu:Networks[Providers] to see a list of all network providers, along with information such as _Name_, _Type_, _EVM Zone_, _Number of Instances_, _Subnets_, and _Region_. Click on a network provider from the list to see additional information about the network provider, and its relationship with the cloud provider, on the summary page.
-. Alternatively, click on a cloud provider to see the cloud provider details and its relationships such as _Network Manager_, _Tenants_, _Instances_ among others. In Relationships, click _Network Manager_ to see information about the network provider, and its relationship with the cloud provider, on the summary page.  
+. Navigate to menu:Networks[Providers] to see a list of all network providers, along with information such as _Name_, _Type_, _EVM Zone_, _Number of Instances_, _Subnets_, and _Region_.
+. Click on a provider from the list to view its summary screen.
+
+image:networkProviders.png[providers]
+
+Network providers summary
+
+image:providerSummaryScreen.png[Summary]
 
 
+The summary screen includes tables containing information on _Properties_, _Status_, _Relationships_, _Overview_, and _Smart Management_. Click on rows in the _Relationship_ and _Overview_ tables to see detailed information for individual entities.
+
+Accordion tabs in the sidebar provide access to  *Properties* and *Relationships* details.
+
+The taskbar includes *Reload*, *Configuration*, *Policy*, and *Monitoring* actions to manage the selected provider.
+
+
+[NOTE]
+Alternatively, click on a cloud provider to see the cloud provider details and its relationships such as Network Manager, Tenants, Instances among others. In Relationships, click Network Manager to see information about the network provider, and its relationship with the cloud provider, on the summary page.
