WIP: SSUI updates

--- a/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
@@ -15,7 +15,13 @@ The Self Service user interface has a slideout navigation menu on the left that 
 Clicking on the arrow icon image:SSUI_popout_arrow.png[Popout Arrow] at the top of the user interface will take you to the full administrative user interface login page, in a new browser window/tab.
 ====
 
-There are several options in the top-right corner of the user interface, including a shopping cart, notifications banner, and a help option. Besides that, you can see the current logged in LDAP user, for example, *Administrator*. As the Self Service user interface supports role-based access control of menus and features, if you are a member of multiple user groups, you can change the acting group by navigating to *_Administrator_* > *Change Group*, then select the new group from the available options in the list.
+There are several options in the menu at the top-right corner of the user interface, including a shopping cart, notifications feature, and a help option. Besides that, you can see the current logged in LDAP user, for example, *Administrator*. 
+
+image:SSUI_topright_menu.png[Top Right Menu Bar]
+
+Click on the shopping cart icon at the top to view services that are now available to order, manage the cart as required, and order all services at one time. Besides that, click on the bell icon to open or close the *Notification* drawer, that shows the various notification events. You can click on the double arrow on the top-left of the drawer to expand or contract the size of the notifications' screen, as required. Click on the help icon to access the options to open *Documentation*, *Red Hat Customer Portal*, and *About*. Click *About* to see information such as the user name and role, browser details, and more importantly, the version number of the logged in Self Servce user interface, which can be useful for support purposes.  
+
+The Self Service user interface supports role-based access control of menus and features. If you are a member of multiple user groups, you can change the acting group by navigating to *_Administrator_* > *Change Group*, then select the new group from the available options in the list.
 
 image:SSUI_Change_Group.png[Change Group]
 
