--- a/doc-Introduction_to_Self_Service_Portal/topics/Service_Catalog_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Service_Catalog_Tab.adoc
@@ -14,4 +14,7 @@ The Self Service user interface has adopted a shopping cart model for ordering s
 
 image:SSUI_Shopping_Cart.png[Shopping Cart]  
 
+If you click *Add to Shopping Cart* for the same item, you will see a pop up window alerting you that there is an identical item in the cart but if you want to add it anyway.
+
+image:SSUI_Duplicate_Item.png[Duplicate Item in the Shopping Cart] 
 
