--- a/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
+++ b/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
@@ -18,7 +18,7 @@ To create a backup of a volume:
 +
 [NOTE]
 ====
-You can take an incremental backup of a volume if you have at least one existing full backup of the volume. An incremental volume saves resources by capturing only changes made to the volume since its last backup. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/9/single/storage-guide#section-create-volume-backup-incremental[Create an Incremental Volume Backup] in the _Red Hat OpenStack Platform Storage Guide_ for details.
+You can take an incremental backup of a volume if you have at least one existing full backup of the volume. An incremental volume saves resources by capturing only changes made to the volume since its last backup. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/9/single/storage-guide#section-create-volume-backup-incremental[Create an Incremental Volume Backup] in the _Red Hat OpenStack Platform Storage Guide_ for more information.
 ====
 +
 . Click *Save*.
