added new sections on VDS networking switches and tagging the switches

--- a/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
@@ -72,3 +72,7 @@ include::topics/Key_Pair.adoc[]
 :leveloffset: 1
 include::topics/Object_Stores.adoc[]
 
+
+:leveloffset: 1
+include::topics/VDS_Switches.adoc[]
+
