--- a/doc-Managing_Infrastructure_and_Inventory/miq/index.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/miq/index.adoc
@@ -72,3 +72,7 @@ include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Key_Pair.adoc[]
 :leveloffset: 1
 include::doc-Managing_Infrastructure_and_Inventory/miq/topics/Object_Stores.adoc[]
 
+
+:leveloffset: 1
+include::doc-Managing_Infrastructure_and_Inventory/miq/topics/VDS_Switches.adoc[]
+
