--- a/doc-Managing_Infrastructure_and_Inventory/topics/VDS_Switches.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VDS_Switches.adoc
@@ -1,11 +1,11 @@
 [[vmware_networking_vds]]
 = VMware Networking Switches
 
-After adding a VMware provider {product-title} automatically discovers the vSphere distributed switches (vDS) on that provider and collects the information in inventory.
+After adding a VMware provider, {product-title} automatically discovers all vSphere distributed switches (vDS) on that provider and collects the information in the {product-title} inventory.
 
-Navigate to menu:Compute[Infrastructure > Networking] to see a list of all VMware switches along with information including _Name_, _Ports_, and _UUID_. Switches and port groups are listed by provider, then cluster on the sidebar.
+Navigate to menu:Compute[Infrastructure > Networking] to see a list of all VMware switches, along with information including _Name_, _Ports_, and _UUID_. Switches and port groups are listed by provider, then cluster on the sidebar.
 
-Click on a switch to view its summary page, which displays relationships with hosts, as well as any tags. 
+Click on a switch to view its summary page, which displays relationships with hosts, and any tags. 
 
 :leveloffset: 2
 include::Tagging_VDS_Switches.adoc[]
