wording edits and clarifications from SME

--- a/doc-Managing_Providers/topics/Creating_a_Cinder_Volume_Snapshot.adoc
+++ b/doc-Managing_Providers/topics/Creating_a_Cinder_Volume_Snapshot.adoc
@@ -1,7 +1,7 @@
 [[creating_cinder_volume_snapshot]]
 = Creating a Snapshot of a Cloud Volume
 
-You can create a snapshot of a Cinder cloud volume to preserve a volume's state at a specific point in time. 
+You can create a snapshot of a Cinder cloud volume to preserve a volume's state at a specific point in time. The snapshot can be used to create a duplicate of the volume.
 
 To create a snapshot of a volume:
 
@@ -13,7 +13,6 @@ To create a snapshot of a volume:
 
 View a volume's snapshots by clicking *Cloud Volume Snapshots* on the volume's summary page.
 
-Question: Anything else you could use the snapshot for?
 
 [NOTE]
 ====
