--- a/doc-Managing_Providers/topics/Editing_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Editing_Cinder_Volumes.adoc
@@ -3,7 +3,7 @@
 
 Only the volume name can be edited on an existing Cinder cloud volume.
 
-To edit a volume:
+To edit a volume's name:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to edit to open its summary page.
