remove images and add em dash

--- a/doc-Managing_Providers/topics/Adding_Viewing_Network_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Viewing_Network_Providers.adoc
@@ -2,7 +2,7 @@
 
 [NOTE]
 ====
-All supported network providers - OpenStack Network, Azure Network, and Amazon EC2 Network, are added or removed automatically upon adding or removing the respective cloud provider.
+All supported network providers -- OpenStack Network, Azure Network, and Amazon EC2 Network, are added or removed automatically upon adding or removing the respective cloud provider.
 ====
 
 Viewing network providers:
@@ -10,18 +10,15 @@ Viewing network providers:
 . Navigate to menu:Networks[Providers] to see a list of all network providers, along with information such as _Name_, _Type_, _EVM Zone_, _Number of Instances_, _Subnets_, and _Region_.
 . Click on a provider from the list to view its summary screen.
 
-image:networkProviders.png[providers]
 
-Network providers summary
-
-image:providerSummaryScreen.png[Summary]
+Network providers summary:
 
 
 The summary screen includes tables containing information on _Properties_, _Status_, _Relationships_, _Overview_, and _Smart Management_. Click on rows in the _Relationship_ and _Overview_ tables to see detailed information for individual entities.
 
 Accordion tabs in the sidebar provide access to  *Properties* and *Relationships* details.
 
-The taskbar includes *Reload*, *Configuration*, *Policy*, and *Monitoring* actions to manage the selected provider.
+Click on *Reload*, *Configuration*, *Policy*, and *Monitoring* actions in the taskbar to manage the selected provider.
 
 
 [NOTE]
