edited wording of storage policy following peer review

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -351,7 +351,7 @@ image:2328.png[]
 .. Under *Count*, select the number of virtual machines you want to create in this request.
 .. Use *Naming* to specify a *VM Name* and *VM Description*. When provisioning multiple virtual machines, a number will be appended to the *VM Name*.
 . Click the *Environment* tab to decide where you want the new virtual machines to reside.
-.. If provisioning from a template on VMware, you can either let {product-title} decide for you by checking *Choose Automatically*, or select a specific cluster, resource pool, folder, host, and datastore. VMware virtual machines can also be provisioned to a clustered datastore by selecting it under *Datastore*. Additionally, you can assign a storage profile to a VMware virtual machine under *Datastore* to configure the virtual machine to operate using a storage policy from that datastore.
+.. If provisioning from a template on VMware, you can either let {product-title} decide for you by checking *Choose Automatically*, or select a specific cluster, resource pool, folder, host, and datastore. VMware virtual machines can also be provisioned to a clustered datastore by selecting it under *Datastore*. Additionally, you can assign a storage profile to a VMware virtual machine under *Datastore* to configure the virtual machine to operate using a storage profile from that datastore.
 +
 Note, read-only datastores are excluded when provisioning a virtual machine.
 +
