made a few wording changes suggsted in peer review

--- a/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
+++ b/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
@@ -1,7 +1,7 @@
 [[creating_a_cinder_backup]]
 = Creating a Cloud Volume Backup
 
-You can create a backup of a Cinder cloud volume to protect against data loss, and restore to in the future.
+You can create a backup of a Cinder cloud volume to protect against data loss, and restore it in the future.
 
 [IMPORTANT]
 ====
