--- a/doc-Managing_Providers/topics/Storage_Managers.adoc
+++ b/doc-Managing_Providers/topics/Storage_Managers.adoc
@@ -4,7 +4,7 @@
 //NEED IMPROVED DEFINITION.
 In {product-title}, a storage manager is a service providing storage resources that you can manage from a {product-title} appliance. This chapter describes the different types of storage managers used by {product-title}, and how to manage them.
 
-Two types of storage managers are currently available to {product-title}: OpenStack Cinder and OpenStack Swift, which manage physical and software-defined storage. These storage managers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
+Two types of storage managers are currently available to {product-title}: OpenStack Cinder and OpenStack Swift. OpenStack Cinder provisions and manages block storage, whereas OpenStack Swift manages object storage within the cloud. These storage managers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
 
 
 :leveloffset: 2
