edited out Cinder and Swift as per product standards

--- a/doc-Managing_Providers/topics/Attaching_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Attaching_Cinder_Volumes.adoc
@@ -1,7 +1,7 @@
 [[attaching_cinder_volumes]]
-= Attaching a Cinder Volume to an Instance
+= Attaching a Volume to an Instance
 
-To attach a Cinder volume to an OpenStack instance:
+To attach a volume to an OpenStack instance:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to attach.
