--- a/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
+++ b/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
@@ -1,11 +1,11 @@
 [[creating_a_cinder_backup]]
-= Creating a Cloud Volume Backup
+= Creating a Backup of a Volume
 
-You can create a backup of a Cinder cloud volume to protect against data loss, and restore it in the future.
+You can create a backup of a volume to protect against data loss, and restore it in the future.
 
 [IMPORTANT]
 ====
-The `cinder-backup` service must be enabled on the OpenStack Cinder manager to create a volume backup.
+The `cinder-backup` service must be enabled on the OpenStack block storage manager to create a volume backup.
 ====
 
 To create a backup of a volume:
