--- a/doc-Managing_Providers/topics/Deleting_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Deleting_Cinder_Volumes.adoc
@@ -1,7 +1,7 @@
 [[deleting_cinder_volumes]]
-= Deleting a Cinder Volume
+= Deleting a Volume
 
-To delete a volume from your Cinder storage manager:
+To delete a volume from your block storage manager:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to delete.
