--- a/doc-Managing_Providers/topics/Detaching_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Detaching_Cinder_Volumes.adoc
@@ -1,7 +1,7 @@
 [[detaching_cinder_volumes]]
-= Detaching a Cinder Volume from an Instance
+= Detaching a Volume from an Instance
 
-To detach a Cinder volume from an OpenStack instance:
+To detach a volume from an OpenStack instance:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to detach.
