--- a/doc-Managing_Providers/topics/Editing_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Editing_Cinder_Volumes.adoc
@@ -1,7 +1,7 @@
 [[editing_cinder_volumes]]
-= Editing a Cinder Volume
+= Editing a Volume
 
-Only the volume name can be edited on an existing Cinder cloud volume.
+Only the volume name can be edited on an existing volume.
 
 To edit a volume's name:
 
