--- a/doc-Managing_Providers/topics/Restoring_from_a_Cinder_Backup.adoc
+++ b/doc-Managing_Providers/topics/Restoring_from_a_Cinder_Backup.adoc
@@ -1,5 +1,5 @@
 [[restoring_from_a_cinder_backup]]
-= Restoring from a Cloud Volume Backup 
+= Restoring a Volume from a Backup 
 
 In case of data loss, you can restore a volume from a backup of a Cinder cloud volume with the following steps:
 
