--- a/doc-Managing_Providers/topics/Storage_Managers.adoc
+++ b/doc-Managing_Providers/topics/Storage_Managers.adoc
@@ -1,18 +1,17 @@
 [[storage_managers]]
 = Storage Managers
 
-//NEED IMPROVED DEFINITION.
 In {product-title}, a storage manager is a service providing storage resources that you can manage from a {product-title} appliance. This chapter describes the different types of storage managers used by {product-title}, and how to manage them.
 
 Two types of storage managers are currently available to {product-title}: OpenStack Cinder and OpenStack Swift. OpenStack Cinder provisions and manages block storage, whereas OpenStack Swift manages object storage within the cloud. These storage managers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
 
 
 :leveloffset: 2
-= OpenStack Cinder Managers
+= OpenStack Block Storage Managers
 
 Cinder is an OpenStack service that provides and manages persistent block storage resources that OpenStack Compute instances can consume.
 
-To use OpenStack Cinder as a storage manager, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The Cinder service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
+To use OpenStack block storage as a storage manager, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The block storage service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
 
 
 
@@ -43,11 +42,11 @@ include::Deleting_Cinder_Volumes.adoc[]
 
 
 :leveloffset: 2
-= OpenStack Swift Managers
+= OpenStack Object Storage Managers
 
 Swift is an OpenStack service that provides cloud object storage.
 
-To use OpenStack Swift as a storage manager, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The Swift service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
+To use the OpenStack object storage service as a storage manager, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The object storage service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
 
 :leveloffset: 3
 include::Viewing_Swift_Object_Stores.adoc[]
