--- a/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
+++ b/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
@@ -1,9 +1,9 @@
 [[creating_cloud_volumes_cinder]]
-= Creating Cloud Volumes on an OpenStack Cinder Manager
+= Creating Volumes on an OpenStack Block Storage Manager
 
-You can create and attach cloud volumes to your OpenStack Cinder manager.
+You can create and attach volumes to your OpenStack block storage manager.
 
-To create a volume on your Cinder storage manager:
+To create a volume:
 
 . Navigate to menu:Storage[Volumes].
 . Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[] (*Add a new Cloud Volume*).
