edited out Cinder and Swift as per product standards

--- a/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
+++ b/doc-Managing_Providers/topics/Creating_a_Cinder_Backup.adoc
@@ -5,7 +5,7 @@ You can create a backup of a volume to protect against data loss, and restore it
 
 [IMPORTANT]
 ====
-The `cinder-backup` service must be enabled on the OpenStack block storage manager to create a volume backup.
+The `cinder-backup` service must be enabled on the OpenStack Block Storage manager to create a volume backup.
 ====
 
 To create a backup of a volume:
