--- a/doc-Managing_Providers/topics/Storage_Managers.adoc
+++ b/doc-Managing_Providers/topics/Storage_Managers.adoc
@@ -3,15 +3,15 @@
 
 In {product-title}, a storage manager is a service providing storage resources that you can manage from a {product-title} appliance. This chapter describes the different types of storage managers used by {product-title}, and how to manage them.
 
-Two types of storage managers are currently available to {product-title}: OpenStack Cinder and OpenStack Swift. OpenStack Cinder provisions and manages block storage, whereas OpenStack Swift manages object storage within the cloud. These storage managers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
+Two types of storage managers are currently available to {product-title}: OpenStack Block Storage (`openstack-cinder`) and OpenStack Object Storage (`openstack-swift`). OpenStack Block Storage provisions and manages block storage, whereas OpenStack Object Storage manages object storage within the cloud. These storage managers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
 
 
 :leveloffset: 2
 = OpenStack Block Storage Managers
 
-Cinder is an OpenStack service that provides and manages persistent block storage resources that OpenStack Compute instances can consume.
+The OpenStack Block Storage service (`openstack-cinder`) provides and manages persistent block storage resources that OpenStack infrastructure instances can consume.
 
-To use OpenStack block storage as a storage manager, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The block storage service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
+To use OpenStack Block Storage as a storage manager, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The Block Storage service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
 
 
 
@@ -44,9 +44,9 @@ include::Deleting_Cinder_Volumes.adoc[]
 :leveloffset: 2
 = OpenStack Object Storage Managers
 
-Swift is an OpenStack service that provides cloud object storage.
+The OpenStack Object Storage (`openstack-swift`) service provides cloud object storage.
 
-To use the OpenStack object storage service as a storage manager, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The object storage service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
+To use the OpenStack Object Storage service as a storage manager, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The Object Storage service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
 
 :leveloffset: 3
 include::Viewing_Swift_Object_Stores.adoc[]
