--- a/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
+++ b/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
@@ -1,7 +1,7 @@
 [[creating_cloud_volumes_cinder]]
 = Creating Volumes on an OpenStack Block Storage Manager
 
-You can create and attach volumes to your OpenStack block storage manager.
+You can create and attach volumes to your OpenStack Block Storage manager.
 
 To create a volume:
 
